hphp/hack/test/typecheck/reserved_name20.php.exp
File "reserved_name20.php", line 5, characters 7-11:
Array cannot be used as it is reserved. (Naming[2068])
