hphp/hack/test/typecheck/reserved_name20.php
<?hh

namespace Foo;

class Array {}
